--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,16 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  	<app-root>
+  		<div id="spinner-container">
+			<div id="spinner-inner">
+				<div class="spinner">
+			  <div class="double-bounce1"></div>
+			  <div class="double-bounce2"></div>
+			</div>
+				<div id="app-name">APPNAME</div>
+			</div>
+		</div>
+	</app-root>
 </body>
 </html>
